[package]
name = "dicomweb-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.6.1"
actix-web = "4.5.1"
dicom = "0.6.3"
dicom-json = "0.1.1"
dicom-object = "0.6.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
