[package]
name = "dicomweb-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["actix"]
actix = ["dep:actix-web", "dep:actix-multipart", "dep:actix-utils"]

[dependencies]
actix-multipart = { version = "0.6.1", optional = true }
actix-utils = { version = "3.0.1", optional = true }
actix-web = { version = "4.5.1", optional = true }
bytes = "1.5.0"
derive_more = "0.99.17"
dicom = "0.6.3"
dicom-json = "0.1.1"
dicom-object = "0.6.3"
dicom-pixeldata = { version = "0.2.2", features = ["image"] }
futures-util = "0.3.30"
httparse = "1.8.0"
local-waker = "0.1.4"
log = "0.4.20"
memchr = "2.7.1"
mime = "0.3.17"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["v4"] }
