[package]
name = "simple_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dicom = "0.6.3"
dicom-object = "0.6.3"
dicomweb-server = {path = "../../server"}
env_logger = "0.11.2"
